--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -17,10 +17,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mdx-js/react": "^2.2.1",
-    "@theme-ui/mdx": "^0.15.4",
     "gatsby": "^5.3.3",
-    "gatsby-plugin-mdx": "^5.3.1",
-    "gatsby-plugin-theme-ui": "^0.15.4",
     "gatsby-source-filesystem": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
