--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@emotion/react": "^11.10.5",
     "@mdx-js/react": "^2.2.1",
     "gatsby": "^5.3.3",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-sharp": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "theme-ui": "^0.15.4"
