--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-layout": "^4.3.0",
     "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-react-helmet": "^6.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-transition-group": "^4.4.5"
   }
 }
