--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "framer-motion": "^10.12.16",
     "gatsby": "^5.3.3",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-layout": "^4.3.0",
@@ -27,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-scroll-parallax": "^3.4.2",
     "react-transition-group": "^4.4.5"
   }
 }
