--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.25",
+    "react-parallax-tilt": "^1.7.145",
     "react-scroll-parallax": "^3.4.2",
     "react-transition-group": "^4.4.5"
   }
